Fixed title styles

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <section id="reviews" class="reviews-section">
         <div class="container">
-            <div class="section-header">
+            <div class="skills-title">
                 <h2>Client Testimonials</h2>
                 <p>See what my clients say about my work on Fiverr</p>
             </div>
