--- a/reference.html
+++ b/reference.html
@@ -57,11 +57,9 @@
     <!-- Price Estimator Section -->
     <div class="py-24">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-16">
-                <h2 class="text-4xl font-bold text-white mb-6">Price Estimator</h2>
-                <p class="text-xl text-gray-400 max-w-2xl mx-auto">
-                    Get an instant estimate for your custom Discord project
-                </p>
+            <div class="skills-title">
+                <h2>Price Estimator</h2>
+                <p>Get an instant estimate for your custom Discord project</p>
             </div>
 
             <!-- Content Container -->
