--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                 </a>                
                 <div class="nav-links">
                     <a href="#hero">About</a>
+                    <a href="#reviews">Reviews</a>
                     <a href="#skills">Skills</a>
                     <a href="#services">Services</a>
+                    <a href="#price-estimator">Estimator</a>
                     <a href="#projects">Projects</a>
                     <a href="#contact">Contact</a>
                 </div>
@@ -41,8 +43,10 @@
             </nav>
             <div class="mobile-menu" id="mobileMenu">
                 <a href="#hero">About</a>
+                <a href="#reviews">Reviews</a>
                 <a href="#skills">Skills</a>
                 <a href="#services">Services</a>
+                <a href="#price-estimator">Estimator</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
