--- a/deratem/index.html
+++ b/deratem/index.html
@@ -175,13 +175,13 @@
                         <div id="pestInfestationContainer">
                             <!-- Dynamic pest infestation items will be added here -->
                         </div>
-                        <button type="button" id="addPestBtn" class="btn-secondary" style="margin-top: 10px;">
+                        <button type="button" id="addPestBtn" class="btn-secondary full-width" style="margin-top: 10px;">
                             + Přidat škůdce
                         </button>
                         <!-- Template for new pest infestation item -->
                         <template id="pestInfestationTemplate">
                             <div class="pest-item" style="margin-bottom: 10px; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
-                                <div style="display: flex; gap: 10px; margin-bottom: 8px;">
+                                <div style="display: flex; gap: 10px;">
                                     <div style="flex: 1;">
                                         <input type="text" class="pest-name" placeholder="Název škůdce" style="width: 100%;">
                                     </div>
