--- a/deratem/index.html
+++ b/deratem/index.html
@@ -568,8 +568,8 @@
                 <h2>Náhled PDF</h2>
                 <div id="pdfPreview"></div>
                 <div class="modal-actions">
-                    <button id="downloadPdf" class="btn-primary">Stáhnout PDF</button>
-                    <button id="closePreview" class="btn-secondary">Zavřít</button>
+                    <button id="downloadPdf" class="btn-primary full-width">Stáhnout PDF</button>
+                    <button id="closePreview" class="btn-secondary full-width">Zavřít</button>
                 </div>
             </div>
         </div>
