--- a/deratem/index.html
+++ b/deratem/index.html
@@ -551,7 +551,7 @@
 
                     <!-- Action Buttons -->
                     <section class="form-section actions">
-                        <button type="button" id="generatePdf" class="btn-primary">Generovat PDF</button>
+                        <button type="button" id="generatePdf" class="btn-primary">Stáhnout PDF</button>
                         <button type="button" id="viewPdf" class="btn-secondary">Zobrazit PDF</button>
                         <button type="button" id="sendEmail" class="btn-primary" disabled>Odeslat e-mailem</button>
                         <button type="button" id="clearForm" class="btn-secondary">Vyčistit formulář</button>
